# correlation-engine-service

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/correlation_engine/: __init__.py  config.py  logging.py
src/correlation_engine/api/: __init__.py  health.py  routes.py
src/correlation_engine/domain/: __init__.py  asset_correlation.py  correlation.py  models.py  rules.py  validation.py  weights.py
tests/: __init__.py  test_scaffold.py
tests/api/: test_correlate_assets_endpoint.py  test_correlate_endpoint.py
tests/domain/: test_asset_correlation.py  test_correlation_rules.py  test_models.py  test_validation.py
tests/fixtures/: couple_challenging.json  couple_harmonious.json
